# anon

./: .gitignore  README.md  anon.py  count_eng.py  get_metrics.py  get_runs_metrics.py  get_ticket_count.py  metrics_runs.csv  pyproject.toml  t.py  teste-exemplo-artigo.txt
data/: example.csv  example.docx  example.xlsx
dataset-teste-anonimizado/: anon_POP_-__-_RS_-__-_CERT-RS_(Todo178_xlsx.csv  anon_POP_-__-_RS_-__-_CERT-RS_(Todo179_xlsx.csv  anon_example_docx.txt  anon_incidents (1)_csv.csv  anon_incidents (2)_csv.csv
db/: anon.db  entities.db  queries.sql
logs/: report_POP_-__-_RS_-__-_CERT-RS_(Todo177_xlsx.txt  report_POP_-__-_RS_-__-_CERT-RS_(Todo178_xlsx.txt  report_POP_-__-_RS_-__-_CERT-RS_(Todo179_xlsx.txt  report_POP_-__-_RS_-__-_CERT-RS_(Todo180_xlsx.txt  report_POP_-__-_RS_-__-_CERT-RS_(Todo181_xlsx.txt  report_example_docx.txt  report_example_xlsx.txt  report_incidents (1)_csv.txt  report_incidents (2)_csv.txt  report_incidents(1)_xlsx.txt  report_incidents_csv.txt  report_incidents_xlsx.txt
output/: anon_POP_-__-_RS_-__-_CERT-RS_(Todo177_xlsx.csv  anon_POP_-__-_RS_-__-_CERT-RS_(Todo180_xlsx.csv  anon_POP_-__-_RS_-__-_CERT-RS_(Todo181_xlsx.csv  anon_incidents(1)_xlsx.csv  data-datasets-csv-POP_-__-_RS_-__-_CERT-RS_(Todo177-xlsx-anon.csv  data-datasets-csv-POP_-__-_RS_-__-_CERT-RS_(Todo178-xlsx-anon.csv  data-datasets-csv-POP_-__-_RS_-__-_CERT-RS_(Todo179-xlsx-anon.csv  data-datasets-csv-POP_-__-_RS_-__-_CERT-RS_(Todo180-xlsx-anon.csv  data-datasets-csv-POP_-__-_RS_-__-_CERT-RS_(Todo181-xlsx-anon.csv  data-datasets-csv-incidents(1)-xlsx-anon.csv  (+7 more)
(+10 files in other folders)
